[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Menu.gd" type="Script" id=1]
[ext_resource path="res://images/Title screen/title_screen_background.png" type="Texture" id=2]
[ext_resource path="res://images/Title screen/name.png" type="Texture" id=3]
[ext_resource path="res://images/Title screen/newgame.png" type="Texture" id=4]
[ext_resource path="res://images/Title screen/selection.png" type="Texture" id=5]
[ext_resource path="res://images/Title screen/exit.png" type="Texture" id=6]

[node name="Menu" type="Node"]
script = ExtResource( 1 )
change_level = "res://Scenes/Scene.tscn"
target_spawn_group = "player"

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.145098, 0.266667, 0.188235, 1 )
scale = Vector2( 0.5, 0.36 )
texture = ExtResource( 2 )
centered = false

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 20.0
margin_bottom = 20.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 595.0
margin_right = 905.0
margin_bottom = 768.0
rect_scale = Vector2( 3, 2 )
size_flags_horizontal = 4
custom_constants/separation = 16

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
margin_right = 310.0
margin_bottom = 101.0
texture = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_left = 93.0
margin_top = 117.0
margin_right = 217.0
margin_bottom = 189.0
size_flags_horizontal = 4

[node name="TextureButton" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 124.0
margin_bottom = 36.0
texture_normal = ExtResource( 4 )
texture_focused = ExtResource( 5 )

[node name="TextureButton2" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 40.0
margin_right = 124.0
margin_bottom = 72.0
texture_normal = ExtResource( 6 )
texture_focused = ExtResource( 5 )

[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/TextureButton2" to="." method="_on_TextureButton2_pressed"]
